<resources>
    <string name="app_name">Evanto</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_repassword">Re-enter password</string>
    <string name="prompt_mobile">Mobile No.</string>
    <string name="prompt_name">Full name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_should_same">Re-entered password should be same as Password Field</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_password_should_same">The entered password should be same</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="enter_location">Enter location</string>
    <string name="use_my_location">Use my location</string>
    <string name="title_activity_map_create_event">Map</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_view_map">Map</string>
</resources>
